<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  
  <view android:id="@+id/mv2"
    class="com.google.android.maps.MapView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1" 
    android:clickable="true"
    android:apiKey="AIzaSyAzR8tEupQfFI03M7T9eMZRQJDMncYB5eI"
    />
    <!--//Signed API key:  0eeeA1XCqRO1PUaxuBt-2wfHvTvitfXoS_z4o6Q--> 
    <!--//Debug API key:  0eeeA1XCqRO2fD-xsnRuB-BlxTFHtuQqTJuDbXA-->
    <!-- Must replace apiKey above with appropriate version below -->
   	<!-- for M33:  android:apiKey="07WVUg-srWUbhpkGj1mi0w56xD9nMEu0NhqJeYg" -->
   	<!-- for M81:  android:apiKey="07WVUg-srWUY6iEC2qTEiuT1mKYkoo6EVPK74pA" --> 
   	<!-- for Castor: android:apiKey="07WVUg-srWUbTcCW-uHqNQR4SdYngQOCgmJN60A" -->
   	
  <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:padding="0px"           
    >
                                            
  <Button android:id="@+id/doOverlay"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30px"
    android:layout_weight="1.0" 
    android:textSize="12sp"   
    android:text="@string/overlay_label" />
    
  <Button android:id="@+id/doAccess"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1.0"
    android:textSize="12sp" 
    android:text="@string/access_label" />
    
  <Button android:id="@+id/doRoute"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="30px"
    android:layout_weight="1.0"
    android:textSize="12sp" 
    android:text="@string/route_label" />
                
  </LinearLayout>
   		
</FrameLayout>
